--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,22 @@
 {
-  "presets": ["react","env"]
+  "presets": [
+    ["env", {
+      "targets": {
+        "browsers": [
+          "last 3 Chrome versions",
+          "last 3 Firefox versions",
+          "last 3 Opera versions",
+          "last 2 Safari versions",
+          "last 2 Edge versions",
+          "last 3 ChromeAndroid versions",
+          "last 2 Android versions",
+          "last 3 iOS versions",
+          "last 3 Samsung versions"
+        ]
+      },
+      "modules": false,
+      "useBuiltIns": "usage"
+    }],
+    "react"],
+  "plugins": ["react-hot-loader/babel"]
 }
