--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "start": "node devServer.js",
-    "build": "webpack --config ./webpack.config.prod.js"
+    "build": "cross-env NODE_ENV=production webpack --config ./webpack.config.prod.js"
   },
   "keywords": [
     "check_list",
@@ -31,10 +31,13 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.17",
+    "cross-env": "^5.1.1",
     "html-webpack-plugin": "^2.30.1",
     "react-hot-loader": "^3.0.0",
     "uglifyjs-webpack-plugin": "^1.0.1",
     "webpack": "^3.8.1",
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.3"
   }
 }
